--- a/JogoDesafio/public/global.css
+++ b/JogoDesafio/public/global.css
@@ -66,6 +66,138 @@ button:focus {
 	border-color: #666;
 }
 
+* {
+	font-family: "Poppins", "sans-serif";
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	overflow: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 140vh;
+	width: 98vw;
+	background: linear-gradient(90deg, rgba(215, 43, 158) 0%, #00ffff);
+}
+
+/* Para id usa-se "#" */
+#main_container {
+	display: flex;
+	align-items: center;
+	gap: 3.5rem;
+	border-radius: 8px;
+	max-height: calc(100vh - 80px);
+	/* 80px para acomodar o padding */
+	/* overflow: auto; */
+}
+
+#image img {
+	width: 40vi;
+}
+
+#soccer-game {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	padding: 2rem;
+	background-color: #262626;
+	border-radius: 8px;
+}
+
+#title {
+	font-size: 2.25rem;
+	position: relative;
+	color: rgba(215, 43, 158);
+}
+
+#title::after {
+	position: absolute;
+	content: "";
+	background-color: #00ffff;
+	width: 8rem;
+	height: 3px;
+	bottom: 0;
+	left: 0;
+	border-radius: 3px;
+}
+
+/* Para class usa-se "." */
+.input-box label {
+	font-size: 1.1rem;
+	color: #00ffff;
+	font-weight: 400;
+}
+
+.input-field {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #3f3f46;
+	padding: 0.3rem;
+	border-radius: 3px;
+	margin-top: 3px;
+}
+
+.input-field span,
+.input-field i {
+	color: rgba(215, 43, 158);
+	font-size: 1.3rem;
+	padding: 0.6rem 1rem;
+}
+
+.input-field input {
+	background-color: transparent;
+	border: none;
+	width: 100%;
+	font-size: 1.3rem;
+	color: #f8fafc;
+	padding: 0 0.5rem;
+	cursor: pointer;
+}
+
+.input-field input::-webkit-outer-spin-button,
+.input-field input::-webkit-inner-spin-button {
+	appearance: none;
+}
+
+.input-field input:focus {
+	outline: none;
+}
+
+#result {
+	display: flex;
+	gap: 2rem;
+	align-items: center;
+	border-top: 1px solid #00ffff;
+	padding: 0.75rem 0;
+}
+
+#gol-scores {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	font-size: 2.25rem;
+}
+
+#gol-scores span:first-child {
+	margin-top: 0.7rem;
+	margin-bottom: 0.5rem;
+	font-size: 1.5rem;
+	color: #00ffff;
+}
+
+#description {
+	flex: 0.94;
+	text-align: center;
+	justify-content: center;
+	font-size: 1.5rem;
+	width: 15.5rem;
+	color: rgba(215, 43, 158);
+}
+
 .hidden {
 	display: none;
 }
